# ReliHub

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile.auto-starter  README.md  SPRINT_C_PREP.md  Sprint_B_PR 合并完成.md  deploy.sh  docker-compose.yml  docker.sh  frontend_auto_starter.conf  frontend_auto_starter.py  requirements.txt  start_frontend_proxy.sh  test_core_functionality.sh  test_frontend_auto_starter.sh  交互关键内容列表.xlsx  任务 A&B 完成总结.md  文件模块集成测试报告_2026-04-07.md  测试数据库迁移自查报告_2026-04-08.md  用户权益额度配置表.xlsx  非标准测试数据库清单_2026-04-07.md  项目完整性与对齐性检查报告_2026-04-07.md
backend/: .dockerignore  .env.example  DEPLOYMENT_GUIDE.md  START_LOCAL.md  alembic.ini  coverage.json  deploy.sh  deploy_local.sh  deploy_sprint_b.sh  docker-compose.yml  pyproject.toml  requirements.txt  verify_api.sh
backend/alembic/: env.py
backend/app/: celery_app.py  main.py
backend/scripts/: check_password.py  create_seed_data.py  fix_blind_index.py  fix_blind_index.sql  init_extensions.py  regenerate_test_accounts.py  test_api_flow.py  test_auth_flow.py  test_login.py  test_password_parsing.py  test_request_parsing.py
backend/tests/: conftest.py  test_admin_service.py  test_ai_api.py  test_ai_integration.py  test_ai_service_integration.py  test_ai_session_message_service.py  test_auth_service.py  test_broadcast_performance.py  test_claude_moonshot.py  test_community_integration.py  test_data_cleanup.py  test_defect_002.py  test_defect_003.py  test_e2e.py  test_file_integration.py  test_ledger_permission.py  test_ledger_service.py  test_llm_provider.py  test_monitoring.py  (+11 more)
(+418 files in other folders)
